# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "trivial"
version = "0.1.0"
edition = "2021"


[dependencies.sdl2]
version = '0.35.2'
features = ['gfx', 'ttf', 'bundled']

[dependencies.windows]
version = "0.42.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]